Fix dynamic change bugs by making HTMLColorRule immutable.  b=99850  r+sr=bzbarsky